2009-12-25  Onkar Shinde  <onkarshinde@gmail.com>

	* data/8085asm.lang: Add underscore ('_') to the regular expression for
	label. Fixes SF #2580092.
	* installer.nsi.in: First shot at installer with modern UI.
	Adds multi-language interface and 'Run program' finish page.
	* configure, autogen.sh, *Makefile.in, config.h.in: Delete the generated
	files that should not be in repository. Add minimal autogen.sh. Going
	forward when compiling from VCS ./autogen.sh needs to be run first.
	Source tar balls will still contain configure script.
	* configure.in: Add some checks suggested by autoscan.
	* Makefile.am: Delete the autogenerated files, *.gz and *.exe in
	distclean target.
	* .gitignore: Add appropriate files to the ignore list.

2009-12-24  Sridhar Ratnakumar  <sridhar.ratna@gmail.com>

	* src/file-op.[c,h], src/callback.c: Fix SF bug #2356534 - basic file
	handling errors (confirm before exit, etc..). Patch by Puneeth Bhat.
	* src/asm-listing.c: Add project webpage to listing (for network
	effects)

2009-12-24  Onkar Shinde  <onkarshinde@gmail.com>

	* installer.nsi.in: Add commands to make example files read only.
	Remove exclusion of svn directories. We are not using svn anymore. :-)
	* WINDOWS-PORT.txt: We need GTK+ 2.12 only. So modify download
	instructions accordingly.
	* src/interface.c: Fix button mnemonics not getting set on starting
	dialog in latest GTK version.

2009-12-23  Onkar Shinde  <onkarshinde@gmail.com>

	* src/callbacks.[c,h], src/gui-editor.[c,h], src/interface.c: Add basic
	printing support to assembly listing window. Print settings are not saved.
	* src/callbacks.c, src/asm-listing.c: Make the text view in assembly
	listing read only. Update the message at the top accordingly.
	* src/interface.c: Remove the images used in 'Registers' and 'Flag' boxes.
	They really have no significance.
	* po/gnusim8085.pot: Auto updated with 'make dist'.
	* doc/examples/*.asm: Replace unnecessary tabs with spaces. Makes