@@ -9,6 +9,9 @@ AM_INIT_AUTOMAKE([check-news])
 AC_CONFIG_SRCDIR([src/main.c])
 AC_CONFIG_HEADERS([config.h])
 
+# Enable silent build when available (Automake 1.11)
+m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
+
 AC_ISC_POSIX
 AC_SUBST(CFLAGS,$CFLAGS)
 AC_PROG_CC
