@@ -1,5 +1,7 @@
 2009-12-25  Onkar Shinde  <onkarshinde@gmail.com>
 
+	* src/bridge.c: Remove a code block that was not being used.
+	* src/gui-app.c: Fix a compiler warning in dialog creation.
 	* data/8085asm.lang: Add underscore ('_') to the regular expression for
 	label. Fixes SF #2580092.
 	* installer.nsi.in: First shot at installer with modern UI.
@@ -8,7 +10,9 @@
 	files that should not be in repository. Add minimal autogen.sh. Going
 	forward when compiling from VCS ./autogen.sh needs to be run first.
 	Source tar balls will still contain configure script.
-	* configure.in: Add some checks suggested by autoscan.
+	* configure.in: Add some checks suggested by autoscan. Use 'silent-rules'
+	macro for automake when available (automake >= 1.11).
+	Makes compiler output pretty.
 	* Makefile.am: Delete the autogenerated files, *.gz and *.exe in
 	distclean target.
 	* .gitignore: Add appropriate files to the ignore list.
